# public-newlang

./: .gitignore  Cargo.toml  README.md  build_all.sh
binaries/: newlang-linux
files/: assinging-things.nl  check.nl  example_four.nl  example_one.nl  example_three.nl  example_two.nl  functions.nl  main_test.nl  most_things.nl  scoped-in-equation.nl  scoping_test.nl  simple_test.nl  type-checking.nl
src/: env.rs  grammar.lalrpop  lexer.rs  lib.rs  linkedlist.rs  main.rs  tokens.rs
src/ast/: expression.rs  mod.rs  typechecker.rs  value.rs
src/stack/: instructions.rs  mod.rs  stackvalue.rs  vm.rs
