[package]
name = "newlang"
version = "0.1.0"
edition = "2021"
authors = ["structwafel"]
license = "MIT"
repository = "https://github.com/structwafel/public-newlang"

[build-dependencies]
lalrpop = { version = "0.22.0" }

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["unicode"] }
logos = "0.14.0"

[features]
default = []

[[bin]]
name = "newlang"
path = "src/main.rs"
